<resources>
    <string name="app_name">Bankodemia</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">INICIO</string>
    <string name="title_card">TARJETA</string>
    <string name="title_services">SERVICIOS</string>
    <string name="available_money">Dinero disponible</string>
    <string name="send">Enviar</string>
    <string name="get">Recibir</string>
    <string name="intro">¡Adiós a las complicaciones!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_credit_card">TARJETA</string>
    <string name="cvv_credit_card">CVV</string>
    <string name="validity_credit_card">Vigencia</string>
    <string name="CardNumber_credit_card">No de Tarjeta</string>
    <string name="servicesTitle_frament_service">Servicios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_account_title_activity">AGREGAR CONTACTO</string>
    <string name="code_interbank_acivity">CLABE</string>
    <string name="card_number_activityAddAccount">TARJETA</string>
    <string name="institucion_title_add_account">Institucion</string>
    <string name="name_add_account">Nombre</string>
    <string name="email_add_account">Correo</string>
    <string name="CardNumberTitle_fragmentCardNumber">No. de tarjeta</string>
    <string name="error_no_internet">Verifica tu conexión a internet e intentalo de nuevo</string>
    <string name="error_empty">Campo necesario</string>
    <string name="error_invalid_email">Email no válido</string>
    <string name="error_length">Error en la longitud</string>
    <string name="error_bad_request">No es posible realizar la petición al servicio. Por favor, verifique los datos e intentelo de nuevo</string>
    <string name="error_no_authorized">Su sesión a expirado, por favor inicie sesión nuevamente</string>
    <string name="error_no_money">No cuentas con el balance suficiente para realizar esta transacción</string>
    <string name="error_something_happened">Algo ocurrió, intentalo de nuevo mas tarde</string>
    <string name="error_consecutive_numbers">No utilices números consecutivos</string>
    <string name="error_consecutive_characters">No utilices caracteres consecutivos</string>
    <string name="error_matching_password">Las contraseñas no coinciden</string>
    <string name="error_min_length_password">La contraseña debe ser de almenos 6 caracteres</string>
    <string name="error_repeated_characters">No utilice caracteres repetidos</string>
    <string name="error_user_already_exists">El email o télefono ya se encuentran registrados</string>
    <string name="login">INICIAR SESION</string>
    <string name="description_login">Escribe el correo y contraseña con el que te registraste, a través de estos te enviaremos el acceso</string>
    <string name="write_your_email">Escribe tu correo</string>
    <string name="write_your_password">Escribe tu contraseña</string>
    <string name="help_login">¿Necesitas ayuda? Escríbenos a bankodemia@com.mx</string>
    <string name="login_up">Iniciar Sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Password</string>
    <string name="back">Return</string>
    <string name="escribe_tu_correo_uppercase">ESCRIBE TU CORREO</string>
    <string name="description_email">Aquí recibirás comprobantes de tus movimientos e inormación sobre tu cuenta</string>
    <string name="warning_privacity">Aviso de privacidad</string>
    <string name="terms">Al tocar continuar aceptas nuestro</string>
    <string name="continuar">Continuar</string>
    <string name="apellido">Apellido</string>
    <string name="names">Nombre(s)</string>
    <string name="ingresa_tus_datos">INGRESA TUS DATOS</string>
    <string name="instructions">Escríbelos tal como aparecen en tu identificación oficial sin abreviaturas</string>
    <string name="description_dates">Esta información es necesaria para verificar tu identidad. Nunca la usaremos sin tu consentimiento.</string>
    <string name="last_name">Apellido(s)</string>
    <string name="ocupacion">Ocupación</string>
    <string name="born">Fecha de nacimiento</string>
    <string name="Continue">Continuar</string>
    <string name="writephone">ESCRIBE TU TELÉFONO</string>
    <string name="description_phone">Lo usarás para iniciar sesión</string>
    <string name="terms_phone">Para proteger tu cuenta, te enviaremos un código vía SMS.</string>
    <string name="your_phone">Tu número de celular</string>
    <string name="identidad">IDENTIDAD</string>
    <string name="introduction_identity">Ahora, vamos a verificar tu identidad para proteger tu cuenta.</string>
    <string name="context_identity">Deberás subir una fotografía de tu INE o pasaporte vigente y tomarte una selfie. Si eres extranjero necesitarás una fotografía de tu documento migratorio (FM3)</string>
    <string name="accept">Entendido</string>
    <string name="type_document">Seleccionado el tipo de documento que deseas fotografiar</string>
    <string name="protect_identity">Conoce cómo protegemos tus documentos</string>
    <string name="passport">Pasaporte</string>
    <string name="ine">INE</string>
    <string name="documento_migratorio">Documento Migratorio</string>
    <string name="next">TODO</string>
    <string name="text_documents">Dale permiso a Bankodemia para utilizar la cámara. Asegúrate de tener buena luz y enfocar bien tu documento de frente.</string>
    <string name="upload_documents">Arrastra tu archivo aquí o subelo desde tu ORDENADOR</string>
    <string name="upload_information">Subir Información</string>
    <string name="documento_migratorio_up">DOCUMENTO MIGRATORIO</string>
    <string name="pasaporte">PASAPORTE</string>
    <string name="password_upper">CONTRASEÑA</string>
    <string name="create_password_secure">Crea una contraseña segura</string>
    <string name="passwoird_2">La usarás para entrar a la app y confirmar tus transacciones.</string>
    <string name="password_3">Usa al menos 6 caracteres alfanuméricos, no consecutivos ni repetidos.</string>
    <string name="contra">Contraseña</string>
    <string name="confirma_contra">Confirma tu contraseña</string>
    <string name="create_password">Crear Contraseña</string>
    <string name="senda_dates">Espera un momento, estamos enviando tus datos</string>
    <string name="logo">Logo</string>
    <string name="final_text">¡Listo! Recibimos tu información. Usualmente tardamos unos minutos en verificar, pero en caso de tener algún problema, nos comunicaremos contigo.</string>
    <string name="thanks">¡GRACIAS POR USAR BANKODEMIA!</string>
    <string name="finish">Finish</string>
    <string name="CardNumberString_fraagmentCreditCard_textview">1234 1234 1234 1234</string>
    <string name="VigencyString_fragmentCardNumber_textview">11/25</string>
    <string name="cvvString_fragmentCreditCard_textview">123</string>
    <string name="transactionConfirmTittle_alertdialod">CONFIRMACION DE TRANFERENCIA</string>
    <string name="textString_AlertDialogLayout">¿Estas segura(o) que quieres realizar esta transaction?</string>
    <string name="aceeptSting_button_alertdialogLayout">Aceptar</string>
    <string name="logostringdescription_fragmenttransactioncomplete">logoStringDescription_fragmentTransactionComplete</string>
    <string name="transacioncomplete_imageviewstringdescription">transacionComplete_imageViewStringDescription</string>
    <string name="transactionCompleteString_textView_fragmentTransactionComplete">Tu transaccion ha sido finalizado</string>
    <string name="backbutton_String_fragmentTransactionComplete">Volver al inicio</string>
    <string name="transactionProcessing_String_fragmentTransactionProcessing">Espera un momento, estamos procesando tu transaccion</string>
    <string name="imagelogodescription_fragmenttransactionprocessing">imageLogoDescription_fragmentTransactionProcessing</string>
    <string name="cantidadString_fragmentMakeTransaction">CANTIDAD</string>
    <string name="conceptPay_String_fragmentMakeTransactions">CONCEPTO DE PAGO</string>
    <string name="tittleTranfer_String_fragmentMAkeTransactions">TRANSFERENCIA</string>
    <string name="sendTitle_String_fragmentMakeTransaction">ENVIAR A</string>
    <string name="nameAccount_String_fragmentMakeTransactions">Cruz Eduardo Reveles Caldera</string>
    <string name="interbankCode_String_fragmentMakeTransactions">1234 1234 1234 1234 /</string>
    <string name="institutionBank_String_fragmentMakeTransactions">/ KODEMIA</string>
    <string name="quantity_String_fragmentMakeTransactions">$150.00</string>
    <string name="speiTittle_String_fragmentMakeTransactions">SPEI sin costo</string>
    <string name="sendTransactionButton_String_fragmentMakeTransaction">Hacer transferencia</string>
    <string name="concept_String_fragmentMakeTransactions">Croquetas</string>
    <string name="imagelogodescription_fragementmaketransaction">imagelogoDescription_fragementMakeTransaction</string>
    <string name="imagebackfragment_fragmentmaketransaction">imageBackFragment_fragmentMakeTransaction</string>
    <string name="background_credit_card_Descriptions">background</string>
    <string name="logolandscape_description_framentcreditcard">logolandscape_description_framentCreditCard</string>
    <string name="logomastercard_description">logomastercard_Description</string>
    <string name="Date_tittle_String">FECHA Y HORA</string>
    <string name="tv_Date_String">25 de enero de 2022 9:00 p.m</string>
    <string name="id_transaccion_Tittle_String">ID DE TRANSACCION</string>
    <string name="tv_idTransactions_String">1234123412341234</string>
    <string name="concept_Titile_String_FragTransaDetails">CONCEPTO</string>
    <string name="tv_Concept_String_FragTransacDetails">Renta Isabel</string>
    <string name="account_Title_String_FragTransactionDetails">CUENTA EMISORA</string>
    <string name="numberAccount_Title_String_FragmentTransactionDetails">Numero de Cuenta</string>
    <string name="tv_accounNumber_fragmentTransactionsDetails">0000 123456</string>
    <string name="tv_Quantity_String_FragmentTransactionDetails">$110.00</string>
    <string name="tv_concept_String_fragmentTransactionsDetails">Renta Isabel</string>
    <string name="Title_String_FragmentTransactionsDetails">DETALLE DE TRANSACCION</string>
    <string name="imageback_description_fragmenttransactiondetails">imageback_Description_FragmentTransactionDetails</string>
    <string name="logofragmentsenlist_descriptions">logoFragmentSenList_Descriptions</string>
    <string name="Title_Description_FragmentSenList">ENVIAR DINERO</string>
    <string name="imageaddusers_descriptions_fragmentsendlist">imageAddUsers_Descriptions_fragmentSendList</string>
    <string name="logodescriptions_fragmentaddcontact">logoDescriptions_FragmentAddContact</string>
    <string name="imageback_description_fragmentaddcontact">imageBack_description_fragmentAddContact</string>
    <string name="eighteen_Digits_title_String">18 digitos</string>
    <string name="interbanckCode_String_tiet">Clabe Interbancaria</string>
    <string name="institution_String_tiet">Institucion</string>
    <string name="email_String_tiet">Correo</string>
    <string name="tiet_String_name">Nombre</string>
    <string name="addAccount_String">Tu contacto fue agregado con exito</string>
    <string name="backgrounddecription_string">backgroundDecription_string</string>
</resources>