<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="16dp"
    tools:context=".ui.transaction_details.view.TransactionDetailsFragment">

    <TextView
        android:id="@+id/transactionDetailsDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_Date_String"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_DateTittle_fragmentTranactionsDetails" />

    <TextView
        android:id="@+id/transactionDetailsIdTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_idTransactions_String"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_IDTransaction_fragmentTransactionDetails" />

    <TextView
        android:id="@+id/transaction_details_concept_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_Concept_String_FragTransacDetails"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ConceptTittle_fragmentTransactionDetails" />

    <TextView
        android:id="@+id/tv_AccountNumber_fragmentTransactionDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/numberAccount_Title_String_FragmentTransactionDetails"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_accountTittle_fragmentTransactionsDetails" />

    <TextView
        android:id="@+id/transaction_details_account_number_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_accounNumber_fragmentTransactionsDetails"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_AccountNumber_fragmentTransactionDetails" />

    <TextView
        android:id="@+id/transaction_details_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_Quantity_String_FragmentTransactionDetails"
        android:textColor="@color/negrokodemia"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TransactionDetailsTittle_fragmentTransactionDetails" />

    <TextView
        android:id="@+id/tv_TransactionDetailsTittle_fragmentTransactionDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Title_String_FragmentTransactionsDetails"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_back_FragmentTransactionDetails"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/transaction_details_concept_subtitle_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/tv_concept_String_fragmentTransactionsDetails"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_details_amount_text_view" />

    <TextView
        android:id="@+id/tv_DateTittle_fragmentTranactionsDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/Date_tittle_String"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_details_concept_subtitle_text_view" />

    <TextView
        android:id="@+id/tv_IDTransaction_fragmentTransactionDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/id_transaccion_Tittle_String"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionDetailsDateTextView" />

    <TextView
        android:id="@+id/tv_ConceptTittle_fragmentTransactionDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/concept_Titile_String_FragTransaDetails"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionDetailsIdTextView" />

    <TextView
        android:id="@+id/tv_accountTittle_fragmentTransactionsDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/account_Title_String_FragTransactionDetails"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_details_concept_text_view" />

    <ImageView
        android:id="@+id/imageView_back_FragmentTransactionDetails"
        android:layout_width="15dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageback_description_fragmenttransactiondetails"
        android:src="@drawable/ic_resource_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>