<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transactions.view.AddContactFragment">

    <LinearLayout
        android:id="@+id/action_bar_add_account"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_logo_add_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logodescriptions_fragmentaddcontact" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout_add_account_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_interbanck_code_activity_AddAccount">

    </FrameLayout>

    <TextView
        android:id="@+id/textView_Title_FragmentAddContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_account_title_activity"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_Back_FragmentAddContact"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_add_account" />

    <TextView
        android:id="@+id/textView_interbanck_code_activity_AddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/code_interbank_acivity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Title_FragmentAddContact" />

    <TextView
        android:id="@+id/textView_card_number_ActivityAddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/card_number_activityAddAccount"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView_interbanck_code_activity_AddAccount"
        app:layout_constraintTop_toTopOf="@+id/textView_interbanck_code_activity_AddAccount" />

    <ImageView
        android:id="@+id/imageView_Back_FragmentAddContact"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_resource_return"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_add_account"
        android:contentDescription="@string/imageback_description_fragmentaddcontact" />


</androidx.constraintlayout.widget.ConstraintLayout>