<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    >


    <!--Toolbar-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="375dp" />

    <!--Textview-->

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/identidad"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/return_login"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textt_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/introduction_identity"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <TextView
        android:id="@+id/tvprotectdocuments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsregular"

        android:text="@string/context_identity"
        android:textFontWeight="600"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textt_view_password"
        app:layout_constraintStart_toStartOf="@+id/textt_view_password"
        app:layout_constraintTop_toBottomOf="@+id/textt_view_password" />


    <!--EditText-->


    <!--Buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/introductionidentity_accept_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/turquesa"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textFontWeight="600"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


    <!--Imagenes-->


    <ImageView
        android:id="@+id/return_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_resource_return"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>