<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.backoders.bankodemia.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_transactionDetailsFragment"
            app:destination="@id/transactionDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_card"
        android:name="mx.backoders.bankodemia.ui.creditcard.CreditCardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_credit_card" >
        <action
            android:id="@+id/action_nav_card_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_services"
        android:name="mx.backoders.bankodemia.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" >
        <action
            android:id="@+id/action_nav_services_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/transactionDetailsFragment"
        android:name="mx.backoders.bankodemia.ui.transaction_details.view.TransactionDetailsFragment"
        android:label="transaction_details_fragment"
        tools:layout="@layout/fragment_transaction_details" >
        <action
            android:id="@+id/action_transactionDetailsFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>