<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/action_bar_add_account_end"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:weightSum="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_logo_add_account_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logodescriptions_fragmentaddcontact" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_background_FragmenAddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar_add_account_end"
        app:srcCompat="@drawable/image2"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/backgrounddecription_string" />

    <TextView
        android:id="@+id/textView_Title_AddAccountEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/addAccount_String"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_background_FragmenAddAccount" />
</androidx.constraintlayout.widget.ConstraintLayout>